# pequod-templates-gcp-extra

./: README.md
gcp-cloudrun-llm-py/: Pulumi.yaml  README.md  __main__.py  requirements.txt
gcp-cloudrun-llm-py/components/component-cloudrun-service/: __main__.py  cloudRunService.py  requirements.txt
gcp-cloudrun-llm-py/gcp-cloudrun-llm-base-py/: .gitignore  Dockerfile.ollama  Pulumi.yaml  README.md  __main__.py  requirements.txt
gcp-cloudrun-llm-py/gcp-cloudrun-llm-base-py/adk-agent/: Dockerfile
gcp-cloudrun-llm-py/gcp-cloudrun-llm-base-py/adk-agent/prod/: agent.py
gcp-cloudrun-llm-py/gcp-cloudrun-llm-deploy-py/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt  utilities.py
gcp-gke-py/: Pulumi.yaml  README.md  __main__.py  requirements.txt
gcp-gke-yaml/: Pulumi.yaml  README.md
gcp-llm-templates/components/component-cloudrun-service/: README.md  cloudRunService.py
gcp-llm-templates/gcp-cloudrun-llm-deploy-py/: README.md  __main__.py
gcp-llm-templates/gcp-llm-cloudrun-deploy-py/: Pulumi.dev.yaml  Pulumi.yaml
gcp-llm-templates/gcp-llm-gke-deploy-py/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  config.py  requirements.txt
gcp-llm-templates/gcp-llm-images-py/: Pulumi.dev.yaml  __main__.py
gcp-llm-templates/gcp-llm-images-py/adk-agent/: pyproject.toml
